A2A compliant responses